Added appropriate formatting

--- a/Assignment_2.tex
+++ b/Assignment_2.tex
@@ -526,13 +526,16 @@ The percentage of total variance explained reduces exponentially as the number o
 \answerbox{50em}{
 \begin{center}
 
-    \includegraphics[width=1.0\textwidth]{5_d_mean.png}
+    \includegraphics[width=1.0\textwidth]{5_d_mean.png}\\
+    \vspace{0.25cm}
 
 
-    \includegraphics[width=1.0\textwidth]{5_d_pca1.png}
+    \includegraphics[width=1.0\textwidth]{5_d_pca1.png}\\
+    \vspace{0.25cm}
 
 
-    \includegraphics[width=1.0\textwidth]{5_d_pca2.png}
+    \includegraphics[width=1.0\textwidth]{5_d_pca2.png}\\
+    \vspace{0.25cm}
 \end{center}
 }
 
